--- a/leaderboard.html
+++ b/leaderboard.html
@@ -6,7 +6,7 @@
     <body>
         <header>
             <h1> Huey! <sup>&TRADE;</sup></h1>
-            <h3> Home </h3>
+            <h3> Leaderboard </h3>
             <nav>
                 <menu>
                     <li><a href="index.html">Home</a></li>
@@ -16,6 +16,5 @@
             </nav>
             <hr />
         </header>
-
     </body>
 </html>
