--- a/index.html
+++ b/index.html
@@ -17,5 +17,20 @@
             <hr />
         </header>
 
+        <main>
+            <h2> Login</h2>
+            <form method="get" action="play.html">
+                <div>
+                    <input type="text" placeholder="your usename" />
+                </div>
+                <div>
+                    <input type="password" placeholder="a weak password" />
+                </div>
+                <button type="submit">Login</button>
+                <button type="submit">Create</button>
+                <button type="reset">Clear</button>
+            </form>
+        </main>
+
     </body>
 </html>
