Add footer for github info on home page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
                 <button type="reset">Clear</button>
             </form>
         </main>
+        <hr />
+
+        <footer>
+            <span class="text-reset"> <sup>&copy;</sup>Jenson J. 2025</span>
+            <a href = "https://github.com/fire8811/startup.git">GitHub</a>
+        </footer>
 
     </body>
 </html>
