Add  image of paint palette + tweak navigation menu

--- a/index.html
+++ b/index.html
@@ -7,13 +7,23 @@
         <header>
             <h1> Huey! <sup>&TRADE;</sup></h1>
             <h3> Home </h3>
-            <nav>
-                <menu>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="play.html">Play Game</a></li>
-                    <li><a href="leaderboard.html">Leaderboard</a></li>
-                </menu>
-            </nav>
+            <table>
+                <tr>
+                    <td>
+                        <img alt="Paint" src="Assets/paint.jpg" width="100" />
+                    </td>
+                    <td>
+                        <nav>
+                            <menu>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="play.html">Play Game</a></li>
+                                <li><a href="leaderboard.html">Leaderboard</a></li>
+                            </menu>
+                        </nav>
+                    </td>
+                </tr>
+            </table>
+            
             <hr />
         </header>
 
