Add Websocket data placeholder for future realtime communication

--- a/play.html
+++ b/play.html
@@ -25,5 +25,17 @@
             </table>
             <hr />
         </header>
+
+        <main>
+            <div class="players">
+                Player:
+                <span class="player-name">Player_Name</span>
+            </div>
+            <ul class="notification">
+                <li class="player-name"> Calvin started a new game</li>
+                <li class="player-name"> Hobbes scored 7</li>
+                <li class="player-name"> Hobess beat his high score!</li>
+            </ul>
+        </main>
     </body>
 </html>
