Add placeholders for score, pause, and game reset

--- a/play.html
+++ b/play.html
@@ -34,8 +34,29 @@
             <ul class="notification">
                 <li class="player-name"> Calvin started a new game</li>
                 <li class="player-name"> Hobbes scored 7</li>
-                <li class="player-name"> Hobess beat his high score!</li>
+                <li class="player-name"> Hobbes beat his high score!</li>
             </ul>
+            <hr />
+
+            <h3> Game </h3>
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <label for="score">Score</label>
+                            <input type ="text" id="score" value="--:--" readonly />
+                        </td>
+                        <td>
+                            <button>Pause</button>
+                        </td>
+                        <td>
+                            <button>Start Over</button>
+                        </td>
+                    </tr>
+                </table>
+                
+            </div>
+
         </main>
     </body>
 </html>
