--- a/play.html
+++ b/play.html
@@ -54,7 +54,28 @@
                         </td>
                     </tr>
                 </table>
-                
+            </div>
+
+            <div>
+                <h4> [API PROVIDED COLOR NAME HERE]</h4>
+                <table>
+                    <tr>
+                        <td>
+                            <svg width="100" height="100">
+                                <rect width="100" height="100" fill="red"/>
+                            </svg>
+                        </td>
+                        <td>
+                            <svg width="100" height="100">
+                                <rect width="100" height="100" fill="blue"/>
+                            </svg>
+                        </td>
+                    </tr>
+                </table>
+                <li>
+                    <label for="color">Color: </label>
+                    <input type="color" value="#ff350c" name="varColor" id="color" />
+                  </li>
             </div>
 
         </main>
