Add leaderboard placeholder

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,5 +25,14 @@
             </table>
             <hr />
         </header>
+        <div>
+            <h3> Top High Scores </h3>
+            <ol>
+                <li>Spaceman Spiff</li>
+                <li>Miss Wormwood</li>
+                <li>Susie Derkins</li>
+            </ol>
+        </div>
+
     </body>
 </html>
