Tweak navigation menu

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <td>
                         <nav>
                             <menu>
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="instructions.html">Instructions</a></li>
                                 <li><a href="play.html">Play Game</a></li>
                                 <li><a href="leaderboard.html">Leaderboard</a></li>
                             </menu>
