--- a/leaderboard.html
+++ b/leaderboard.html
@@ -17,7 +17,7 @@
                             <menu>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="play.html">Play Game</a></li>
-                                <li><a href="leaderboard.html">Leaderboard</a></li>
+                                <li><a href="instructions.html">Instructions</a></li>
                             </menu>
                         </nav>
                     </td>
