--- a/play.html
+++ b/play.html
@@ -16,7 +16,7 @@
                         <nav>
                             <menu>
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="play.html">Play Game</a></li>
+                                <li><a href="instructions.html">Instructions</a></li>
                                 <li><a href="leaderboard.html">Leaderboard</a></li>
                             </menu>
                         </nav>
