Add Submit color button

--- a/play.html
+++ b/play.html
@@ -75,7 +75,8 @@
                 <li>
                     <label for="color">Color: </label>
                     <input type="color" value="#ff350c" name="varColor" id="color" />
-                  </li>
+                </li>
+                <button>Submit</button>
             </div>
 
         </main>
