Finish Footer for Home page

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     </main>
 
 
-    <footer class = "bg-dark text-white-50">
+    <footer class="text-white">
       <div class="container-fluid">
-        <span class="text-reset"> <sup>&copy;</sup>Jenson J. 2025</span>
-        <a href = "https://github.com/fire8811/startup.git">GitHub</a>
-        <a href="https://www.vecteezy.com/free-png/paint-palette">Paint Palette PNGs by Vecteezy</a>
+        <span class="text-reset"> &copy;2025 Jenson J. </span>
+        <a href = "https://github.com/fire8811/startup.git">(GitHub)</a>
+        <a class="pallete-credit" href="https://www.vecteezy.com/free-png/paint-palette">Paint Palette PNGs by Vecteezy</a>
       </div>
     </footer>
   </body>
