--- a/index.html
+++ b/index.html
@@ -13,16 +13,29 @@
     crossorigin="anonymous"/>
 
   </head>
-  <body>
-    <header class = "container-fluid">
+  <body class="bg-dark">
+    <header class ="container-fluid">
       <nav class="navbar fixed-top navbar-dark">
-        <a class="navbar-brand" href="#"> Huey!<sup>&TRADE;</sup></a>
+        <a class="navbar-brand" href="#">
+          <img alt="Paint" src="Assets/pallette.png" width="50" />
+          Huey!<sup>&TRADE;</sup></a>
         <menu class="navbar-nav">
-          
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="play.html">Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="instructions.html">Instructions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="leaderboard.html">Leaderboard</a>
+          </li>
         </menu>
       </nav>
     </header>
-    <header>
+    <!----<header>
       <table>
         <tr>
           <td>
@@ -33,8 +46,6 @@
           </td>
             </tr>
       </table>
-      <h3> Home </h3>
-      <!---
         <table>
           <tr>
             <td>
@@ -48,9 +59,7 @@
             </td>
           </tr>
         </table>
-      -->
-
-    </header>
+    </header> --->
     <main>
       <h2> Login</h2>
       <form method="get" action="play.html">
