--- a/instructions.html
+++ b/instructions.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title> Huey!</title>
-    </head>
-    <body>
-        <header>
-            <h1> Huey! <sup>&TRADE;</sup></h1>
-            <h3> Instructions </h3>
-            <table>
-                <tr>
-                    <td>
-                        <img alt="Paint" src="Assets/paint.jpg" width="100" />
-                    </td>
-                    <td>
-                        <nav>
-                            <menu>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="play.html">Play Game</a></li>
-                                <li><a href="leaderboard.html">Leaderboard</a></li>
-                            </menu>
-                        </nav>
-                    </td>
-                </tr>
-            </table>
-            <hr />
-        </header>
-        <div>
-            <p>Huey is a game where you simply match the color between
-                two squares! The Square on the left contains the target square,
-                and using the color picker on the right, you can change the color
-                of the right square until they match! Try to get as many matches
-                as possible in under a minute!
-            </p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> Huey!</title>
+    
+    <link rel="stylesheet" href="instructions.css"/>
 
-    </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+    crossorigin="anonymous"/>
+
+  </head>
+  <body class="bg-dark">
+    <header class ="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">
+          <img alt="Paint" src="Assets/pallette.png" width="50" />
+          Huey!<sup>&TRADE;</sup></a>
+        <menu class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="play.html">Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="instructions.html">Instructions</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="leaderboard.html">Leaderboard</a>
+          </li>
+        </menu>
+      </nav>
+    </header>
+    <main>
+      <p>Huey is a game where you simply match the color between
+        two squares! The Square on the left contains the target square,
+        and using the color picker on the right, you can change the color
+        of the right square until they match! Try to get as many matches
+        as possible in under a minute!
+      </p>
+    </main>
+    <footer class="text-white">
+      <div class="container-fluid">
+        <span class="text-reset"> &copy;2025 Jenson J. </span>
+        <a href = "https://github.com/fire8811/startup.git">(GitHub)</a>
+        <a class="pallete-credit" href="https://www.vecteezy.com/free-png/paint-palette">Paint Palette PNGs by Vecteezy</a>
+      </div>
+    </footer>
+  </body>
 </html>
