--- a/play.html
+++ b/play.html
@@ -1,84 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title> Huey!</title>
-    </head>
-    <body>
-        <header>
-            <h1> Huey! <sup>&TRADE;</sup></h1>
-            <h3> Play Game </h3>
-            <table>
-                <tr>
-                    <td>
-                        <img alt="Paint" src="Assets/paint.jpg" width="100" />
-                    </td>
-                    <td>
-                        <nav>
-                            <menu>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="instructions.html">Instructions</a></li>
-                                <li><a href="leaderboard.html">Leaderboard</a></li>
-                            </menu>
-                        </nav>
-                    </td>
-                </tr>
-            </table>
-            <hr />
-        </header>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-widt, initial-scale=1">
+    <title> Play Huey!</title>
+    <link rel="stylesheet" href="play.css"/>
 
-        <main>
-            <div class="players">
-                Player:
-                <span class="player-name">Player_Name</span>
-            </div>
-            <ul class="notification">
-                <li class="player-name"> Calvin started a new game</li>
-                <li class="player-name"> Hobbes scored 7</li>
-                <li class="player-name"> Hobbes beat his high score!</li>
-            </ul>
-            <hr />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+    crossorigin="anonymous"/>    
+  </head>
 
-            <h3> Game </h3>
-            <div>
-                <table>
-                    <tr>
-                        <td>
-                            <label for="score">Score</label>
-                            <input type ="text" id="score" value="--:--" readonly />
-                        </td>
-                        <td>
-                            <button>Pause</button>
-                        </td>
-                        <td>
-                            <button>Start Over</button>
-                        </td>
-                    </tr>
-                </table>
-            </div>
+  <body class="bg">
+    <header class="container-fluid">
+      <nav class="navbar fixed-top navbar-dark">
+        <a class="navbar-brand" href="#">
+          <img alt="Paing" src="Assets/pallette.png" width="50" />
+          Huey! <sup>&TRADE;</sup>
+        </a>
+        <menu class="navbar-nav">
+          <li class="nav-item text">
+            <a class="nav-link active" href="index.html"> Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="play.html"> Play</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="instructions.html"> Instructions </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="leaderboard.html"> Leaderboard</a>
+          </li>
+        </menu>
+      </nav>
+    
+    </header>
 
-            <div>
-                <h4> [API PROVIDED COLOR NAME HERE]</h4>
-                <table>
-                    <tr>
-                        <td>
-                            <svg width="100" height="100">
-                                <rect width="100" height="100" fill="red"/>
-                            </svg>
-                        </td>
-                        <td>
-                            <svg width="100" height="100">
-                                <rect width="100" height="100" fill="blue"/>
-                            </svg>
-                        </td>
-                    </tr>
-                </table>
-                <li>
-                    <label for="color">Color: </label>
-                    <input type="color" value="#ff350c" name="varColor" id="color" />
-                </li>
-                <button>Submit</button>
-            </div>
+      <main>
+          <div class="players">
+              Player:
+              <span class="player-name">Player_Name</span>
+          </div>
+          <ul class="notification">
+              <li class="player-name"> Calvin started a new game</li>
+              <li class="player-name"> Hobbes scored 7</li>
+              <li class="player-name"> Hobbes beat his high score!</li>
+          </ul>
+          <hr />
 
-        </main>
-    </body>
+          <h3> Player_Name's Game </h3>
+          <div>
+              <table>
+                  <tr>
+                      <td>
+                          <label for="score">Score</label>
+                          <input type ="text" id="score" value="--:--" readonly />
+                      </td>
+                      <td>
+                          <button>Pause</button>
+                      </td>
+                      <td>
+                          <button>Start Over</button>
+                      </td>
+                  </tr>
+              </table>
+          </div>
+
+          <div>
+              <h4> [API PROVIDED COLOR NAME HERE]</h4>
+              <table>
+                  <tr>
+                      <td>
+                          <svg width="100" height="100">
+                              <rect width="100" height="100" fill="red"/>
+                          </svg>
+                      </td>
+                      <td>
+                          <svg width="100" height="100">
+                              <rect width="100" height="100" fill="blue"/>
+                          </svg>
+                      </td>
+                  </tr>
+              </table>
+              <li>
+                  <label for="color">Color: </label>
+                  <input type="color" value="#ff350c" name="varColor" id="color" />
+              </li>
+              <button>Submit</button>
+          </div>
+    </main>
+    <footer class="text-white">
+      <div class="container-fluid">
+        <span class="text-reset"> &copy;2025 Jenson J. </span>
+        <a href = "https://github.com/fire8811/startup.git">(GitHub)</a>
+        <a class="pallete-credit" href="https://www.vecteezy.com/free-png/paint-palette">Paint Palette PNGs by Vecteezy</a>
+      </div>
+    </footer>
+  </body>
 </html>
