--- a/index.html
+++ b/index.html
@@ -35,19 +35,28 @@
         </menu>
       </nav>
     </header>
+
     <main>
-      <h2> Login</h2>
+      <h2> Welcome to Huey</h2>
+
+      <div id="card" class="demo-box">
+        <div class="card border-0 shadow" style="width:400px">
+          <div class="card-body">
+            <div class="form-group">
+              <input type="text" class="form-control" id="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="password" placeholder="Password">
+            </div>
+            <div id="btn">
+              <a href="#" class="btn btn-primary">Login</a>
+              <a href="#" class="btn btn-outline-primary">Sign up</a>
+            </div>
+            
+          </div>
+        </div>
+      </div>
       <form method="get" action="play.html">
-      <div>
-        <input type="text" placeholder="your usename" />
-      </div>
-      <div>
-        <input type="password" placeholder="a weak password" />
-      </div>
-        <button type="submit">Login</button>
-        <button type="submit">Create</button>
-        <button type="reset">Clear</button>
-      </form>
     </main>
 
 
