--- a/instructions.html
+++ b/instructions.html
@@ -36,6 +36,7 @@
       </nav>
     </header>
     <main>
+      <h2>How to Play</h2>
       <p>Huey is a game where you simply match the color between
         two squares! The Square on the left contains the target square,
         and using the color picker on the right, you can change the color
