Finish styling for leaderboard

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -40,9 +40,17 @@
       <div>
         <h3> Top High Scores </h3>
         <ol>
-          <li>Spaceman Spiff</li>
-          <li>Miss Wormwood</li>
-          <li>Susie Derkins</li>
+          <li>
+            <div class="score-name">Spaceman Spiff</div>
+            <div class="score">15</div>
+          </li>
+          <li>
+            <div class="score-name">Miss Wormwood</div>
+            <div class="score">12</div>
+          </li>
+          <li>
+            <div class="score-name">Susie Derkins</div>
+            <div class="score">9</div>
         </ol>
       </div>
     </main>
