Move notifications and create initial card for game interface

--- a/play.html
+++ b/play.html
@@ -38,57 +38,70 @@
     </header>
 
       <main>
-          <div class="players">
-              Player:
-              <span class="player-name">Player_Name</span>
-          </div>
-          <ul class="notification">
-              <li class="player-name"> Calvin started a new game</li>
-              <li class="player-name"> Hobbes scored 7</li>
-              <li class="player-name"> Hobbes beat his high score!</li>
-          </ul>
-          <hr />
+        <ul class="notification">
+          <li class="player-name"> Calvin started a new game</li>
+          <li class="player-name"> Hobbes scored 7</li>
+          <li class="player-name"> Hobbes beat his high score!</li>
+        </ul>
 
-          <h3> Player_Name's Game </h3>
-          <div>
-              <table>
-                  <tr>
-                      <td>
-                          <label for="score">Score</label>
-                          <input type ="text" id="score" value="--:--" readonly />
-                      </td>
-                      <td>
-                          <button>Pause</button>
-                      </td>
-                      <td>
-                          <button>Start Over</button>
-                      </td>
-                  </tr>
-              </table>
+        <h2></h2>
+        <div id="card" class="demo-box">
+          <div class="card border-0 shadow" style="width:400px">
+            <div class="card-body">
+              
+              <div id="btn">
+                <a href="#" class="btn btn-primary">Select</a>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+
+
+
+
+
+
+          <!---
+            <table>
+              <tr>
+                <td>
+                  <label for="score">Score</label>
+                  <input type ="text" id="score" value="--:--" readonly />
+                </td>
+                <td>
+                  <button>Pause</button>
+                </td>
+                <td>
+                  <button>Start Over</button>
+                </td>
+              </tr>
+            </table>
           </div>
 
           <div>
-              <h4> [API PROVIDED COLOR NAME HERE]</h4>
-              <table>
-                  <tr>
-                      <td>
-                          <svg width="100" height="100">
-                              <rect width="100" height="100" fill="red"/>
-                          </svg>
-                      </td>
-                      <td>
-                          <svg width="100" height="100">
-                              <rect width="100" height="100" fill="blue"/>
-                          </svg>
-                      </td>
-                  </tr>
+            <h4> [API PROVIDED COLOR NAME HERE]</h4>
+            <table>
+              <tr>
+                <td>
+                  <svg width="100" height="100">
+                    <rect width="100" height="100" fill="red"/>
+                  </svg>
+                </td>
+                <td>
+                  <svg width="100" height="100">
+                    <rect width="100" height="100" fill="blue"/>
+                  </svg>
+                </td>
+              </tr>
               </table>
               <li>
-                  <label for="color">Color: </label>
-                  <input type="color" value="#ff350c" name="varColor" id="color" />
+                <label for="color">Color: </label>
+                <input type="color" value="#ff350c" name="varColor" id="color" />
               </li>
-              <button>Submit</button>
+            <button>Submit</button>
           </div>
+          --->
     </main>
     <footer class="text-white">
       <div class="container-fluid">
