Tweak player notification color/spacing

--- a/play.html
+++ b/play.html
@@ -38,11 +38,13 @@
     </header>
 
       <main>
-        <ul class="notification">
-          <li class="player-name"> Calvin started a new game</li>
-          <li class="player-name"> Hobbes scored 7</li>
-          <li class="player-name"> Hobbes beat his high score!</li>
-        </ul>
+        <div class="notification">
+          <ul>
+            <li class="player-name"> Calvin started a new game</li>
+            <li class="player-name"> Hobbes scored 7</li>
+            <li class="player-name"> Hobbes beat his high score!</li>
+          </ul>
+        </div>
 
         <div class="center-content">
           <h3>Player_Name's Game</h3>
