Finish game card

--- a/play.html
+++ b/play.html
@@ -51,6 +51,14 @@
           <div id="card" class="demo-box">
             <div class="card border-0 shadow" style="width:400px">
               <div class="card-body">
+                <div class="game-info">
+                  <div class="score">
+                    Score: &nbsp;<span id="score-value">00</span>
+                  </div>
+                  <div class="time">
+                    Time Remaining: &nbsp;<span id="time-remaining">60s</span>
+                  </div>
+                </div>
                 <h5> [API PROVIDED COLOR NAME HERE]</h5>
                 <div class="squares">
                   <svg width="100" height="100">
